--- a/src/resources/libs/css/kan.css
+++ b/src/resources/libs/css/kan.css
@@ -133,7 +133,9 @@ tbody {
     font-size: 13px;
     padding: unset;
 }
-
+.card-body{
+    padding: .75rem 1rem;
+}
 .kan-row {
     background-color: #fff;
     padding: .75rem 1rem;
