--- a/src/templates/relatorios/dashboad.html
+++ b/src/templates/relatorios/dashboad.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <h6 class="card-title">Leitos por status</h6>
-                <canvas id="pieTotalVend" class="chart chart-bar" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels"
+                <canvas id="pieTotalVend" class="chart chart-pie" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels"
                     chart-colors="vm.colors" chart-options="vm.taxaStatusLeito.options">
                 </canvas>
             </div>
