--- a/src/templates/relatorios/dashboad.html
+++ b/src/templates/relatorios/dashboad.html
@@ -23,17 +23,28 @@
                 <select ng-model="vm.alaSelecionada" class="form-control form-control-sm col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4" ng-change="vm.atualizarGraficos()"
                     ng-options="ala.nomeAla for ala in vm.alas track by ala.idAla"></select>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <h6 class="card-title">Leitos por status</h6>
-                <canvas id="pieTotalVend" class="chart chart-pie" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels"
-                    chart-colors="vm.colors" chart-options="vm.taxaStatusLeito.options">
-                </canvas>
+            <div class="col-12 kan-group">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+                    <h6 class="card-title">Leitos por status</h6>
+                    <p ng-show="vm.taxaStatusLeito.exibeMensagem">{{vm.mensagemSemDados}}</p>
+                    <canvas id="pieTotalVend" class="chart chart-pie" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels"
+                        chart-colors="vm.colors" chart-options="vm.taxaStatusLeito.options">
+                    </canvas>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+                    <h6 class="card-title">Disponibilidade dos leitos por enfermaria</h6>
+                    <p ng-show="vm.ocupacaoAlas.exibeMensagem">{{vm.mensagemSemDados}}</p>
+                    <canvas id="bar" class="chart chart-bar chartjs-render-monitor" chart-colors="vm.ocupacaoAlas.colors" chart-data="vm.ocupacaoAlas.data"
+                        chart-labels="vm.ocupacaoAlas.labels" chart-series="vm.ocupacaoAlas.series" chart-options="vm.ocupacaoAlas.options"
+                        chart-dataset-override="vm.ocupacaoAlas.datasetOverride" </canvas>
+                </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <h6 class="card-title">Disponibilidade dos leitos por enfermaria</h6>
-                <canvas id="bar" class="chart chart-bar chartjs-render-monitor" chart-colors="vm.ocupacaoAlas.colors" chart-data="vm.ocupacaoAlas.data"
-                    chart-labels="vm.ocupacaoAlas.labels" chart-series="vm.ocupacaoAlas.series" chart-options="vm.ocupacaoAlas.options"
-                    chart-dataset-override="vm.ocupacaoAlas.datasetOverride" </canvas>
+                <h6 class="card-title">Pendências de internação abertas</h6>
+                <p ng-show="vm.taxaTipoPendenciaInternacao.exibeMensagem">{{vm.mensagemSemDados}}</p>
+                <canvas class="chart chart-pie" chart-data="vm.taxaTipoPendenciaInternacao.data" chart-labels="vm.taxaTipoPendenciaInternacao.labels"
+                    chart-colors="vm.colors" chart-options="vm.taxaTipoPendenciaInternacao.options">
+                </canvas>
             </div>
         </div>
     </div>
