Adicionado factory para serviços de transferências / Implementado tela para realizar transferência e listar as transferências que já ocorreram / Realizado chamada da tela na diretiva de registro

--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -44,12 +44,13 @@
                 <th class="text-center">Diagnóstico</th>
                 <th class="text-center">Pendências</th>
                 <th class="text-center">Observações</th>
+                <th class="text-center">Transferências</th>
                 <th class="text-center" ng-show="showAcoes">Ações</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="registro in registros" ng-class="{'table-success' : registro.classificacao === 'verde', 'table-danger' : registro.classificacao === 'vermelho', 'table-warning' : registro.classificacao === 'amarelo'}">
-                <td class="text-center" title="{{registro.pedidoInternacao.ala.nomeAla}}">{{registro.pedidoInternacao.ala.nomeAla}}</td>
+                <td class="text-center" title="{{registro.leito.enfermaria.ala.nomeAla}}">{{registro.leito.enfermaria.ala.nomeAla}}</td>
                 <td class="text-center" title="{{registro.leito.enfermaria.nomeEnfermaria}}">{{registro.leito.enfermaria.nomeEnfermaria}}</td>
                 <td class="text-center">{{registro.leito.nomeLeito}}</td>
                 <td class="text-center" title="{{registro.pedidoInternacao.medicoResponsavel}}">{{registro.pedidoInternacao.medicoResponsavel}}</td>
@@ -74,6 +75,11 @@
                         <i class="fa fa-file"></i>
                     </button>
                 </td>
+                <td class="text-center" ng-click="openModalTransferenciasLeito(registro)">
+                        <button class="btn kan-btn-circle kan-btn-success kan-btn-sm" data-toggle="tooltip" title="Transferência de leito">
+                            <i class="fa fa-exchange"></i>
+                        </button>
+                    </td>
                 <td class="text-center" ng-show="showAcoes">
                     <button class="btn kan-btn-success kan-btn-sm" ng-click="closeModal(registro)">
                         Escolher
