--- a/src/templates/internacao/finalizacaoInternacao.html
+++ b/src/templates/internacao/finalizacaoInternacao.html
@@ -35,7 +35,7 @@
             <label>Ala
                 <b class="text-danger">*</b>
             </label>
-            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.ala.nomeAla">
+            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.leito.enfermaria.ala.nomeAla">
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
             <label>Enfermaria
