--- a/src/templates/relatorios/dashboad.html
+++ b/src/templates/relatorios/dashboad.html
@@ -1,74 +1,148 @@
 <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-        <span>Página Inicial</span>
-    </li>
-    <li class="breadcrumb-item active">
-        <span>Dashboard</span>
-    </li>
-    <li class="text-right">
-        <button class="btn kan-btn-success kan-btn-sm" ng-click="vm.atualizarGraficos()">
-            <i if-loading class="fa fa-refresh" tooltips tooltip-side="left" tooltip-template="Pressione para atualizar os dados."></i>
-            Atualizar
-        </button>
-    </li>
+	<li class="breadcrumb-item">
+		<span>Página Inicial</span>
+	</li>
+	<li class="breadcrumb-item active">
+		<span>Dashboard</span>
+	</li>
+	<li class="text-right">
+		<button class="btn kan-btn-success kan-btn-sm" ng-click="vm.atualizarGraficos()">
+			<i if-loading class="fa fa-refresh" tooltips tooltip-side="left" tooltip-template="Pressione para atualizar os dados."></i>
+			Atualizar
+		</button>
+	</li>
 </ol>
 
 <div class="row bg-white m-0 mb-3">
-    <div class="card border-0">
-        <div class="card-body">
-            <div class="col-12 kan-group">
-                <h5 class=" kan-title">Relatórios por ala</h5>
-                <label>Ala
-                </label>
-                <select ng-model="vm.alaSelecionada" class="form-control form-control-sm col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4" ng-change="vm.atualizarGraficos()"
-                    ng-options="ala.nomeAla for ala in vm.alas track by ala.idAla"></select>
-            </div>
-            <div class="col-12 kan-group">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                    <h6 class="card-title">Leitos por status</h6>
-                    <p ng-show="vm.taxaStatusLeito.exibeMensagem">{{vm.mensagemSemDados}}</p>
-                    <canvas class="chart chart-pie" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels" chart-colors="vm.colors"
-                        chart-options="vm.taxaStatusLeito.options">
-                    </canvas>
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                    <h6 class="card-title">Disponibilidade dos leitos por enfermaria</h6>
-                    <p ng-show="vm.ocupacaoAlas.exibeMensagem">{{vm.mensagemSemDados}}</p>
-                    <canvas class="chart chart-bar chartjs-render-monitor" chart-colors="vm.ocupacaoAlas.colors" chart-data="vm.ocupacaoAlas.data"
-                        chart-labels="vm.ocupacaoAlas.labels" chart-series="vm.ocupacaoAlas.series" chart-options="vm.ocupacaoAlas.options"
-                        chart-dataset-override="vm.ocupacaoAlas.datasetOverride" </canvas>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <h6 class="card-title">Pendências de internação abertas</h6>
-                <p ng-show="vm.taxaTipoPendenciaInternacao.exibeMensagem">{{vm.mensagemSemDados}}</p>
-                <canvas class="chart chart-pie" chart-data="vm.taxaTipoPendenciaInternacao.data" chart-labels="vm.taxaTipoPendenciaInternacao.labels"
-                    chart-colors="vm.colors" chart-options="vm.taxaTipoPendenciaInternacao.options">
-                </canvas>
-            </div>
-        </div>
-    </div>
+	<div class="card border-0">
+		<div class="card-body">
+			<div class="col-12 kan-group">
+				<h5 class=" kan-title">Relatórios por ala</h5>
+				<label>Ala
+				</label>
+				<select ng-model="vm.alaSelecionada" class="form-control form-control-sm col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4" ng-change="vm.atualizarGraficos()"
+				 ng-options="ala.nomeAla for ala in vm.alas track by ala.idAla"></select>
+			</div>
+			<div class="col-12 kan-group">
+				<div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 kan-group">
+					<div class="card text-white bg-success kan-height-card">
+						<div class="card-body">
+							<div class="icon-card">
+								<i class="fa fa-thumbs-up"></i>
+							</div>
+							<div class="mr-5">{{vm.kanban.verde.qtdPacientes}} Paciente(s)</div>
+						</div>
+						<div class="card-footer text-white clearfix small">
+							<span class="float-left">Ver pacientes</span>
+							<div class="float-right">
+								<button data-toggle="tooltip" data-placement="right" title="Pressione para visualizar os pacientes internados nessa classificação!"
+								 ng-if="vm.kanban.canShowPacientes" class="kan-btn-circle btn-dark" ng-click="vm.openDetalhesKanban(vm.kanban.verde.pacientes)">
+									<i class="fa fa-eye kan-icon"></i>
+								</button>
+
+								<button tooltips tooltip-side="right" tooltip-template="Atualização em andamento" ng-disabled="true" ng-if="!vm.kanban.canShowPacientes"
+								 class="kan-btn-circle btn-dark">
+									<i class="fa fa-refresh rotate"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 kan-group">
+					<div class="card text-white bg-warning  kan-height-card">
+						<div class="card-body">
+							<div class="icon-card">
+								<i class="fa fa-exclamation-triangle"></i>
+							</div>
+							<div class="mr-5">{{vm.kanban.amarelo.qtdPacientes}} Paciente(s)</div>
+						</div>
+						<div class="card-footer text-white clearfix small" href="#">
+							<span class="float-left">Ver pacientes</span>
+							<div class="float-right">
+								<button tooltips tooltip-side="right" tooltip-template="Pressione para visualizar os pacientes internados nessa classificação!"
+								 ng-if="vm.kanban.canShowPacientes" class="float-right kan-btn-circle btn-dark" ng-click="vm.openDetalhesKanban(vm.kanban.amarelo.pacientes)">
+									<i class="fa fa-eye kan-icon"></i>
+								</button>
+
+								<button tooltips tooltip-side="right" tooltip-template="Atualização em andamento" ng-disabled="true" ng-if="!vm.kanban.canShowPacientes"
+								 class="float-right kan-btn-circle btn-dark">
+									<i class="fa fa-refresh rotate"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 kan-group">
+					<div class="card text-white bg-danger  kan-height-card">
+						<div class="card-body">
+							<div class="icon-card">
+								<i class="fa fa-exclamation-circle"></i>
+							</div>
+							<div class="mr-5">{{vm.kanban.vermelho.qtdPacientes}} Paciente(s)</div>
+						</div>
+						<div class="card-footer text-white clearfix small" href="#">
+							<span class="float-left">Ver pacientes</span>
+							<div class="float-right">
+								<button tooltips tooltip-side="right" tooltip-template="Pressione para visualizar os pacientes internados nessa classificação!"
+								 ng-if="vm.kanban.canShowPacientes" class="float-right kan-btn-circle btn-dark" ng-click="vm.openDetalhesKanban(vm.kanban.vermelho.pacientes)">
+									<i class="fa fa-eye kan-icon"></i>
+								</button>
+
+								<button tooltips tooltip-side="right" tooltip-template="Atualização em andamento" ng-disabled="true" ng-if="!vm.kanban.canShowPacientes"
+								 class="float-right kan-btn-circle btn-dark">
+									<i class="fa fa-refresh rotate"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 kan-group">
+				<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+					<h6 class="card-title">Leitos por status</h6>
+					<p ng-show="vm.taxaStatusLeito.exibeMensagem">{{vm.mensagemSemDados}}</p>
+					<canvas class="chart chart-pie" chart-data="vm.taxaStatusLeito.data" chart-labels="vm.taxaStatusLeito.labels" chart-colors="vm.colors"
+					 chart-options="vm.taxaStatusLeito.options">
+					</canvas>
+				</div>
+				<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+					<h6 class="card-title">Disponibilidade dos leitos por enfermaria</h6>
+					<p ng-show="vm.ocupacaoAlas.exibeMensagem">{{vm.mensagemSemDados}}</p>
+					<canvas class="chart chart-bar chartjs-render-monitor" chart-colors="vm.ocupacaoAlas.colors" chart-data="vm.ocupacaoAlas.data"
+					 chart-labels="vm.ocupacaoAlas.labels" chart-series="vm.ocupacaoAlas.series" chart-options="vm.ocupacaoAlas.options"
+					 chart-dataset-override="vm.ocupacaoAlas.datasetOverride" </canvas>
+				</div>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+				<h6 class="card-title">Pendências de internação abertas</h6>
+				<p ng-show="vm.taxaTipoPendenciaInternacao.exibeMensagem">{{vm.mensagemSemDados}}</p>
+				<canvas class="chart chart-pie" chart-data="vm.taxaTipoPendenciaInternacao.data" chart-labels="vm.taxaTipoPendenciaInternacao.labels"
+				 chart-colors="vm.colors" chart-options="vm.taxaTipoPendenciaInternacao.options">
+				</canvas>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="row bg-white m-0 mb-3">
-    <div class="card border-0">
-        <div class="card-body">
-            <div class="col-12 kan-group">
-                <h5 class=" kan-title">Relatórios gerais</h5>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <h6 class="card-title">Pacientes internados por gênero</h6>
-                <p ng-show="vm.ocupacaoGenero.exibeMensagem">{{vm.mensagemSemDados}}</p>
-                <canvas class="chart chart-pie" chart-data="vm.ocupacaoGenero.data" chart-labels="vm.ocupacaoGenero.labels" chart-colors="vm.colors"
-                    chart-options="vm.ocupacaoGenero.options">
-                </canvas>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <h6 class="card-title">Pacientes internados por gênero</h6>
-                <p ng-show="vm.ocupacaoGenero.exibeMensagem">{{vm.mensagemSemDados}}</p>
-                <canvas  class="chart chart-horizontal-bar" chart-data="vm.ocupacaoIdade.data" chart-labels="vm.ocupacaoIdade.labels" chart-colors="vm.colors"
-                    chart-options="vm.ocupacaoIdade.options"> </canvas>
-            </div>
-        </div>
-    </div>
+	<div class="card border-0">
+		<div class="card-body">
+			<div class="col-12 kan-group">
+				<h5 class=" kan-title">Relatórios gerais</h5>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+				<h6 class="card-title">Pacientes internados por gênero</h6>
+				<p ng-show="vm.ocupacaoGenero.exibeMensagem">{{vm.mensagemSemDados}}</p>
+				<canvas class="chart chart-pie" chart-data="vm.ocupacaoGenero.data" chart-labels="vm.ocupacaoGenero.labels" chart-colors="vm.colors"
+				 chart-options="vm.ocupacaoGenero.options">
+				</canvas>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
+				<h6 class="card-title">Pacientes internados por gênero</h6>
+				<p ng-show="vm.ocupacaoGenero.exibeMensagem">{{vm.mensagemSemDados}}</p>
+				<canvas class="chart chart-horizontal-bar" chart-data="vm.ocupacaoIdade.data" chart-labels="vm.ocupacaoIdade.labels" chart-colors="vm.colors"
+				 chart-options="vm.ocupacaoIdade.options"> </canvas>
+			</div>
+		</div>
+	</div>
 </div>
