Ajustado diretiva de registro de internações para que ela carregue e atualize os registros de internações

--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -32,7 +32,7 @@
                 <th class="text-center">Leito</th>
                 <th class="text-center">Médico</th>
                 <th class="text-center">Residente</th>
-                <th class="text-center">Admissão</th>
+                <th class="text-center">Data da Admissão</th>
                 <th class="text-center">Previsao de Alta</th>
                 <th class="text-center">Dias Internado</th>
                 <th class="text-center">Prontuário</th>
