Adicionado direcionamento para a lista de internações a partir do card de classificação de internação do paciente no dashboard

--- a/src/templates/relatorios/kanbanListaRegistroInternacao.html
+++ b/src/templates/relatorios/kanbanListaRegistroInternacao.html
@@ -15,7 +15,7 @@
                         {{pacientes[0].classificacao}}
                     </b>
                 </h5>
-                <lista-registros-internacao registros="pacientes" oculta-legenda="true" dados-filtros="dadosFiltros" evento="evento"></lista-registros-internacao>
+                <lista-registros-internacao registros="pacientes" oculta-legenda="true" dados-filtros="dadosFiltros" evento="evento" nao-carregar-ao-iniciar="true"></lista-registros-internacao>
             </div>
         </fieldset>
     </div>
