--- a/src/templates/directives/filtros.html
+++ b/src/templates/directives/filtros.html
@@ -12,9 +12,8 @@
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
             <label>Ala
             </label>
-            <select ng-model="model.idAla" class="form-control form-control-sm">
+            <select ng-model="model.ala" class="form-control form-control-sm" ng-options="ala.nomeAla for ala in alas track by ala.idAla">
                 <option value="">Todas</option>
-                <option ng-repeat="ala in Alas" value="{{ala.idAla}}">{{ala.nomeAla}}</option>
             </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group" ng-show="!isPedido">
