--- a/src/templates/internacao/registroInternacao.html
+++ b/src/templates/internacao/registroInternacao.html
@@ -37,7 +37,7 @@
                 <label>Ala
                     <b class="text-danger">*</b>
                 </label>
-                <input disabled class="form-control form-control-sm" type="text" ng-model="registroInternacao.leito.enfermaria.ala.nomeAla">
+                <input disabled class="form-control form-control-sm" type="text" ng-model="registroInternacao.pedidoInternacao.ala.nomeAla">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
                 <label>Data de admissão
@@ -135,14 +135,6 @@
                     <option ng-repeat="leito in Leitos" value="{{leito.idLeito}}">{{leito.nomeLeito + " " + leito.generoLeito.substr(0,3) + "."}}</option>
                 </select>
             </div>
-
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-                <label>Data de internação
-                    <b class="text-danger">*</b>
-                </label>
-                <input class="form-control form-control-sm" type="date" ng-model="registroInternacao.dataInternacao">
-            </div>
-
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <label>Previsão de alta
                     <b class="text-danger">*</b>
