Ajustado gráfico da taxa de ocupação por idade

--- a/src/templates/relatorios/dashboad.html
+++ b/src/templates/relatorios/dashboad.html
@@ -140,7 +140,7 @@
 				</canvas>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
-				<h6 class="card-title">Pacientes internados por gênero</h6>
+				<h6 class="card-title">Pacientes internados por faixa de idade</h6>
 				<p ng-show="vm.ocupacaoGenero.exibeMensagem">{{vm.mensagemSemDados}}</p>
 				<canvas class="chart chart-horizontal-bar" chart-data="vm.ocupacaoIdade.data" chart-labels="vm.ocupacaoIdade.labels" chart-colors="vm.colors"
 				 chart-options="vm.ocupacaoIdade.options"> </canvas>
