--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -123,7 +123,7 @@
                 <label>Data de admissão
                     <b class="text-danger">*</b>
                 </label>
-                <input class="form-control form-control-sm" type="date" ng-model="pedidoInternacao.dataAdmissao">
+                <input class="form-control form-control-sm" type="datetime-local" ng-model="pedidoInternacao.dataAdmissao">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
                 <label>Médico Responsável
