Alterado campos de médico e residente para combo box devido alteração para utilizar entidade funcionario

--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -53,8 +53,8 @@
                 <td class="text-center" title="{{registro.leito.enfermaria.ala.nomeAla}}">{{registro.leito.enfermaria.ala.nomeAla}}</td>
                 <td class="text-center" title="{{registro.leito.enfermaria.nomeEnfermaria}}">{{registro.leito.enfermaria.nomeEnfermaria}}</td>
                 <td class="text-center">{{registro.leito.nomeLeito}}</td>
-                <td class="text-center" title="{{registro.pedidoInternacao.medicoResponsavel}}">{{registro.pedidoInternacao.medicoResponsavel}}</td>
-                <td class="text-center" title="{{registro.pedidoInternacao.residenteResponsavel}}">{{registro.pedidoInternacao.residenteResponsavel}}</td>
+                <td class="text-center" title="{{registro.pedidoInternacao.medicoResponsavel.nome}}">{{registro.pedidoInternacao.medicoResponsavel.nome}}</td>
+                <td class="text-center" title="{{registro.pedidoInternacao.residenteResponsavel.nome}}">{{registro.pedidoInternacao.residenteResponsavel.nome}}</td>
                 <td class="text-center">{{registro.pedidoInternacao.dataAdmissao | date : "dd/MM/yy HH:mm"}}</td>
                 <td class="text-center">{{registro.previsaoAlta | date : "dd/MM/yy"}}</td>
                 <td class="text-center">{{registro.diasInternado}}</td>
