--- a/src/templates/internacao/finalizacaoInternacao.html
+++ b/src/templates/internacao/finalizacaoInternacao.html
@@ -59,13 +59,13 @@
             <label>Médico Responsável
                 <b class="text-danger">*</b>
             </label>
-            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.medicoResponsavel">
+            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.medicoResponsavel.nome">
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
             <label>Residente Responsável
                 <b class="text-danger">*</b>
             </label>
-            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.residenteResponsavel">
+            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.residenteResponsavel.nome">
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
             <label>Isolamento
