--- a/src/templates/cadastros-gerais/cadastroFuncionario.html
+++ b/src/templates/cadastros-gerais/cadastroFuncionario.html
@@ -19,7 +19,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
                 <label>CRM
                 </label>
-                <input class="form-control form-control-sm" type="number" placeholder="Informe o crm" ng-model="funcionario.crm">
+                <input class="form-control form-control-sm" type="text" placeholder="Informe o crm" ng-model="funcionario.crm">
             </div>
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
