--- a/src/templates/directives/filtros.html
+++ b/src/templates/directives/filtros.html
@@ -12,41 +12,46 @@
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
             <label>Ala
             </label>
-            <select ng-model="model.ala" class="form-control form-control-sm" ng-options="ala.nomeAla for ala in alas track by ala.idAla">
+            <select ng-model="model.ala" class="form-control form-control-sm" ng-options="ala.nomeAla for ala in alas track by ala.idAla"
+                ng-change="carregarEnfermarias()">
                 <option value="">Todas</option>
             </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group" ng-show="!isPedido">
             <label>Enfermaria
             </label>
-            <select ng-model="model.idEnfermaria" class="form-control form-control-sm">
+            <select ng-model="model.idEnfermaria" ng-disabled="enfermarias == undefined" class="form-control form-control-sm" ng-change="carregarLeitosEnfermaria()">
                 <option value="">Todas</option>
-                <option ng-repeat="enfermaria in Enfermarias" value="{{enfermaria.idEnfermaria}}">{{enfermaria.nomeEnfermaria}}</option>
+                <option ng-repeat="enfermaria in enfermarias" value="{{enfermaria.idEnfermaria}}">{{enfermaria.nomeEnfermaria}}</option>
             </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group" ng-show="!isPedido">
             <label>Leito
             </label>
-            <select ng-model="model.idLeito" class="form-control form-control-sm">
+            <select ng-model="model.idLeito" ng-disabled="leitos == undefined" class="form-control form-control-sm">
                 <option value="">Todos</option>
-                <option ng-repeat="leito in Leitos" value="{{leito.idLeito}}">{{leito.nomeLeito}}</option>
+                <option ng-repeat="leito in leitos" value="{{leito.idLeito}}">{{leito.nomeLeito}}</option>
             </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
             <label>Médico(a) Responsável
             </label>
-            <input type="text" class="form-control form-control-sm" ng-model="model.medicoResponsavel">
+            <select ng-model="model.medicoResponsavel" class="form-control form-control-sm" ng-options="medico.nome for medico in medicos track by medico.idFuncionario">
+                <option value="">Selecione o médico responsável</option>
+            </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
             <label>Residente Responsável
             </label>
-            <input type="text" class="form-control form-control-sm" ng-model="model.residenteResponsavel">
+            <select ng-model="model.residenteResponsavel" class="form-control form-control-sm" ng-options="residente.nome for residente in outrosFuncionarios track by residente.idFuncionario">
+                <option value="">Selecione o residente responsável</option>
+            </select>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
             <label>Isolamento
             </label>
             <select ng-model="model.idIsolamento" class="form-control form-control-sm">
-                <option value="">Todos</option>
+                <option value="">Todos ou nenhum</option>
                 <option ng-repeat="isolamento in Isolamentos" value="{{isolamento.idIsolamento}}">{{isolamento.nome}}</option>
             </select>
         </div>
