Retirado funcionalidade de cadastro de isolamento

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -124,13 +124,13 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Isolamentos">
+                        <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Isolamentos">
                             <a class="nav-link" ui-sref="tiposIsolamentos">
                                 <span class="nav-link-text">
                                     Tipos de Isolamentos
                                 </span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tipos de Pendências">
                             <a class="nav-link" ui-sref="tiposPendencias">
                                 <span class="nav-link-text">
