Alterado local de acesso da página leitos no menu

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -39,7 +39,7 @@
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" data-target="#internacao-subitens" aria-expanded="false" aria-controls="internacao-subitens"
                     data-toggle="tooltip" data-placement="right" title="Internação">
-                    <img class="menu-icon" src="img/pedido.png" alt="Internação">
+                    <img class="menu-icon" src="img/leito.png" alt="Internação">
                     <span class="menu-title ml-2">Internação</span>
                     <i class="fa fa-caret-down ml-auto mr-2" aria-hidden="true"></i>
                 </a>
@@ -81,12 +81,6 @@
                     </ul>
                 </div>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reltório de Leitos">
-                <a class="nav-link" ui-sref="leitos">
-                    <img src="img/leito.png" alt="">
-                    <span class="nav-link-text">Status dos Leitos</span>
-                </a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" data-target="#geral-subitens" aria-expanded="false" aria-controls="geral-subitens"
                     data-toggle="tooltip" data-placement="right" title="Cadastro Gerais">
@@ -117,6 +111,13 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Leitos">
+                                <a class="nav-link" ui-sref="leitos">
+                                    <span class="nav-link-text">
+                                        Leitos
+                                    </span>
+                                </a>
+                            </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Exames">
                             <a class="nav-link" ui-sref="tiposExames">
                                 <span class="nav-link-text">
