--- a/src/templates/relatorios/leitos.html
+++ b/src/templates/relatorios/leitos.html
@@ -11,7 +11,7 @@
 	<div class="kan-row">
 		<fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-				<h5 class="kan-title">Status dos leitos
+				<h5 class="kan-title">Leitos Cadadastrados
 					<i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará os dados dos leitos do hospital e também o status atual. 
                         No campo abaixo você consegue filtrar alguma informação na lista."></i>
 				</h5>
