Ajustado tela de pedido para campo diagnostico ser texto

--- a/src/templates/directives/registrosInternacao.html
+++ b/src/templates/directives/registrosInternacao.html
@@ -64,7 +64,7 @@
                 <td class="text-center" title="{{registro.pedidoInternacao.paciente.idade}}">{{registro.pedidoInternacao.paciente.idade}}</td>
                 <td class="text-center" title="{{registro.pedidoInternacao.paciente.sexo}}">{{registro.pedidoInternacao.paciente.genero}}</td>
                 <td class="text-center text-danger" title="{{registro.pedidoInternacao.isolamento.nome}}"> {{registro.pedidoInternacao.isolamento.nome}} </td>
-                <td class="text-center" title="{{registro.pedidoInternacao.diagnostico.descricaoDiagnostico}}">{{registro.pedidoInternacao.diagnostico.descricaoDiagnostico}}</td>
+                <td class="text-center" title="{{registro.pedidoInternacao.diagnostico}}">{{registro.pedidoInternacao.diagnostico}}</td>
                 <td class="text-center" ng-click="openModalPendenciasInternacao(registro)">
                     <button class="btn kan-btn-circle kan-btn-danger kan-btn-sm" data-toggle="tooltip" title="Pendências">
                         <i class="fa fa-file"></i>
