--- a/src/templates/internacao/finalizacaoInternacao.html
+++ b/src/templates/internacao/finalizacaoInternacao.html
@@ -53,7 +53,7 @@
             <label>Diagnóstico
                 <b class="text-danger">*</b>
             </label>
-            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.diagnostico.descricaoDiagnostico">
+            <input disabled class="form-control form-control-sm" type="text" ng-model="vm.finalizacaoInternacao.registroInternacao.pedidoInternacao.diagnostico">
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
             <label>Médico Responsável
