--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -110,22 +110,13 @@
                     <option ng-repeat="ala in Alas" value="{{ala.idAla}}">{{ala.nomeAla}}</option>
                 </select>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-7 col-xl-7 kan-group">
-                <label>Diagnóstico
-                    <b class="text-danger">*</b>
-                </label>
-                <select class="form-control form-control-sm" ng-model="pedidoInternacao.idDiagnostico">
-                    <option value="">Selecione o diagnóstico </option>
-                    <option ng-repeat="diagnostico in Diagnosticos" value="{{diagnostico.idDiagnostico}}">{{diagnostico.descricaoDiagnostico}}</option>
-                </select>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-5 col-xl-5 kan-group">
+            <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-4 kan-group">
                 <label>Data de admissão
                     <b class="text-danger">*</b>
                 </label>
                 <input class="form-control form-control-sm" type="datetime-local" ng-model="pedidoInternacao.dataAdmissao">
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
+            <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-8 kan-group">
                 <label>Médico Responsável
                     <b class="text-danger">*</b>
                 </label>
@@ -140,6 +131,10 @@
                 <select ng-model="pedidoInternacao.residenteResponsavel" class="form-control form-control-sm" ng-options="residente.nome for residente in outrosFuncionarios track by residente.idFuncionario">
                     <option value="">Selecione o residente responsável</option>
                 </select>
+            </div>
+            <div class="col-12 kan-group">
+                <label>Diagnóstico</label>
+                <textarea maxlength="500" rows="3" class="form-control form-control-sm" placeholder="Informe o diagnóstico" ng-model="pedidoInternacao.diagnostico"></textarea>
             </div>
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
